# fastapiproject_withauth

./: .gitignore  db.sqlite3  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_07_17_0014-d8743e0d5cc6_create_users_table.py
api_v1/: __init__.py
api_v1/auth/: utils.py
api_v1/users/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  users.py
